--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,7 @@ Paleta de colores:
 }
 
 main {
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 article {
@@ -26,7 +26,7 @@ article {
 
 form {
     margin: 0 auto;
-    width: 40%;
+    width: 30%;
 }
 
 legend {
@@ -101,9 +101,8 @@ td {
     margin-bottom: 0;
 }
 
-.listado {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+
+
+.bg-beige {
+    background-color: beige;
 }
